Get everything working, building